--- a/install
+++ b/install
@@ -1,2 +1,3 @@
 #!/bin/bash
-ln -s lib/server node_modules/server-runtime
+ln -s  "$(pwd)/app/unicorns"   node_modules/unicorns
+ln -s  "$(pwd)/app/components" node_modules/ui
